--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
-<h1>
-  {{title}}
-</h1>
+<app-navbar></app-navbar>
+<div class="container">
+	<div class="row">
+	<div class="col-md-8 ">
+		
+				<router-outlet></router-outlet>
+	
+			</div>
+	</div>
+</div>
